[tool.poetry]
name = "livekit-agents"
version = "0.12.17"
description = ""
authors = ["rachel <rachel@facere.ai>"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
# requires = ["hatchling==1.26.3", "hatch-vcs"]
# build-backend = "hatchling.build"

# [project]
# name = "livekit-agents"
# version = "0.12.17"
# description = ""
# authors = [{name="rachel", email="rachel@facere.ai"}]
# 
# [tool.hatch.build.targets.wheel]
# packages = ["livekit/agents"]

[tool.poetry.dependencies]
python = "3.10.*"
build = "1.2.2"
